# HCRProbeDesign

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  VERSIONINFO.md  eGFP_reads.fa  environment.yaml  index.html  mKcnip3_probes.fa  mKcnip3_reads.fa  mkdocs.yml  objects.inv  probeDesign.py  search.html  setup.cfg  setup.py  sitemap.xml  tdTomato_reads.fa  test_reads.fa
.github/workflows/: gh-pages.yml
api/: index.html
cli/: index.html
configuration/: index.html
docs/: api.md  cli.md  configuration.md  index.md  installation.md  probe-design-workflow.md  reference-genome.md  requirements.txt  usage.md
installation/: index.html
probe-design-workflow/: index.html
probeDesign/: BLAST.py  HCR.py  genomeMask.py  masks.py  repeatMask.py  sequencelib.py  thermo.py  tiles.py  utils.py
reference-genome/: index.html
search/: search_index.json
src/HCRProbeDesign/: BLAST.py  HCR.py  HCRconfig.yaml  __init__.py  _datadir.py  genomeMask.py  listReferences.py  prob.py  probeDesign.py  referenceGenome.py  repeatMask.py  sequencelib.py  thermo.py  tiles.py  utils.py
src/HCRProbeDesign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/probeDesign/: genomeMask.py  probeDesign.py
test/: eGFP.fa  mKcnip3.fa  tdTomato.fa
tests/: conftest.py  eGfp.fa  mCdh20.fa  mCx3cl1.fa  mCx3cr1.fa  mGfap.fa  target_reads.fa  test_datadir.py  test_genome_mask.py  test_list_references.py  test_probe_design.py  test_reference_genome.py  test_sequencelib.py  test_tiles.py
usage/: index.html
