[metadata]
# replace with your username:
name = HCRProbeDesign
version = 0.2.1
author = Loyal A. Goff
author_email = loyalgoff@jhmi.edu
description = Probe Design tool for Hybridization Chain Reaction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gofflab/HCRProbeDesign
project_urls =
    Bug Tracker = https://github.com/gofflab/HCRProbeDesign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    designProbes = HCRProbeDesign.probeDesign:main
    fetchIndex = HCRProbeDesign.genomeMask:install_index
