[metadata]
# replace with your username:
name = hcrprobedesign
version = 0.2.5
author = Loyal A. Goff
author_email = loyalgoff@jhmi.edu
description = Probe Design tool for Hybridization Chain Reaction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gofflab/HCRProbeDesign
project_urls =
    Bug Tracker = https://github.com/gofflab/HCRProbeDesign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    primer3-py
    biopython
    beautifulsoup4
    pysam
    zipfile36
    pyyaml
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
HCRProbeDesign =
    HCRconfig.yaml
    indices/.gitkeep

[options.entry_points]
console_scripts =
    designProbes = HCRProbeDesign.probeDesign:main
    designProbesBatch = HCRProbeDesign.probeDesign:main_batch
    fetchMouseIndex = HCRProbeDesign.genomeMask:install_index
    buildGenomeIndex = HCRProbeDesign.referenceGenome:main
